@@ -1,3 +1,9 @@
+2012-10-10  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* dwfl_module_addrsym.c (dwfl_module_addrsym): New function
+	binding_value.  Use it for both zero and non-zero size symbols
+	comparisons.
+
 2012-10-01  Mark Wielaard  <mjw@redhat.com>
 
 	* cu.c (cudie_offset): Don't use type_sig8, it might not be
